start writing DBN

--- a/ref.bib
+++ b/ref.bib
@@ -60,3 +60,14 @@
 	year={2006},
 	publisher={MIT Press}
 }
+
+@article{arel2010deep,
+  title={Deep machine learning-a new frontier in artificial intelligence research [research frontier]},
+  author={Arel, Itamar and Rose, Derek C and Karnowski, Thomas P},
+  journal={Computational Intelligence Magazine, IEEE},
+  volume={5},
+  number={4},
+  pages={13--18},
+  year={2010},
+  publisher={IEEE}
+}
