--- a/code/ipython_test/dbn_training.ipynb
+++ b/code/ipython_test/dbn_training.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "metadata": {
     "collapsed": true
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {
     "collapsed": false
    },
@@ -328,11 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RBM training epoc: 1\n",
+      "RBM training epoc: 1\n",
+      "epoc for fine_tuning:  1\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(0)\n",
     "nodes = [784, 500, 500, 2000, 10]\n",
@@ -345,11 +355,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correct rate is:  0.0\n"
+     ]
+    }
+   ],
    "source": [
     "test_x, test_y = pt.get_test_data()\n",
     "test_x = test_x > 50\n",
