--- a/code/ipython_test/distribution_validate.ipynb
+++ b/code/ipython_test/distribution_validate.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -16,12 +16,16 @@
     "from scipy.special import expit\n",
     "import scipy.cluster.vq as spvq\n",
     "import scipy.spatial.distance as spdt\n",
-    "import matplotlib.cm as cm"
+    "import matplotlib.cm as cm\n",
+    "from scipy.optimize import curve_fit\n",
+    "import statsmodels.api as sm\n",
+    "#from scipy.stats import poisson\n",
+    "from scipy.misc import factorial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -89,25 +93,130 @@
     "train_num = len(index_digit) - 1\n",
     "index_train = index_digit[0:train_num]\n",
     "Data_v = np.array(train_x[index_train]).astype(float)\n",
-    "#dis_D = np.average(Data_v,0)\n",
     "k_center = spvq.kmeans(Data_v, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "plt.imshow(np.reshape(k_center[0],(28,28)), cmap=cm.gray_r,interpolation='none')\n",
+    "#plt.imshow(np.reshape(k_center[0],(28,28)), cmap=cm.gray_r,interpolation='none')\n",
+    "#plt.show()\n",
+    "dis_D=[]\n",
+    "for i in range(len(Data_v)):\n",
+    "    dis_D.append(np.linalg.norm(Data_v[i]-k_center[0]))\n",
+    "his = np.histogram(dis_D) #, bins=[0, 1, 2, 3]\n",
+    "mid_bin = 0.5*(his[1][1:] + his[1][:-1])\n",
+    "plt.plot(mid_bin, his[0])\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(dis_D, '.')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 2.027519\n",
+      "         Iterations 11\n",
+      "                          Poisson Regression Results                          \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   No. Observations:                 5420\n",
+      "Model:                        Poisson   Df Residuals:                     5419\n",
+      "Method:                           MLE   Df Model:                            0\n",
+      "Date:                Tue, 17 Nov 2015   Pseudo R-squ.:                   0.000\n",
+      "Time:                        18:34:01   Log-Likelihood:                -10989.\n",
+      "converged:                       True   LL-Null:                       -10989.\n",
+      "                                        LLR p-value:                       nan\n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [95.0% Conf. Int.]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          2.1166      0.005    449.025      0.000         2.107     2.126\n",
+      "==============================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "#popt, pcov = curve_fit(poisson, his[0], his[1][0:-1])\n",
+    "res = sm.Poisson(dis_D,np.ones_like(dis_D)).fit()\n",
+    "print res.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ld= np.exp(2.1166)\n",
+    "normal = his[0]#*1./sum(his[0])\n",
+    "# poisson function, parameter lamb is the fit parameter\n",
+    "def poisson(k, lamb):\n",
+    "    return (lamb**k/factorial(k)) * np.exp(-lamb)\n",
+    "def gauss(x, A, mu, sigma):\n",
+    "    #A, mu, sigma = p\n",
+    "    return A*np.exp(-(x-mu)**2/(2.*sigma**2))\n",
+    "# fit with curve_fit\n",
+    "parameters, cov_matrix = curve_fit(gauss, mid_bin, normal) \n",
+    "#popt, pcov = curve_fit(poisson.pmf(his[0], ld), his[0], his[1][0:-1])\n",
+    "\n",
+    "# plot poisson-deviation with fitted parameter\n",
+    "x_plot = np.linspace(0, 20, 1000)\n",
+    "plt.plot(mid_bin, normal)\n",
+    "#plt.plot(mid_bin, poisson(mid_bin, np.exp(2.1166)))\n",
+    "plt.plot(x_plot, gauss(x_plot, *parameters), 'r-', lw=2)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  5.42000001e+02,   1.00000000e+00,   7.41455210e+07])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +256,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 10000 is out of bounds for axis 0 with size 10000",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-46-9115afd03a2a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0ms_num\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mdis\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms_num\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mdata_g\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata_h\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0msampling_k\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms_num\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minit_v\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms_num\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mdis\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms_num\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_g\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mk_center\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-45-3b4c5619744c>\u001b[0m in \u001b[0;36msampling_k\u001b[1;34m(a, b, w, sample_num, init_v)\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mgibbs_h\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mg_step\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msigmoid_sampling\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgibbs_v\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mg_step\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[0mgibbs_v\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mg_step\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msigmoid_sampling\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgibbs_h\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mg_step\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mgibbs_h\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msample_num\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msigmoid_sampling\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgibbs_h\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msample_num\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mgibbs_v\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgibbs_h\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 10000 is out of bounds for axis 0 with size 10000"
+     ]
+    }
+   ],
+   "source": [
+    "dis = {}\n",
+    "for step in range(11924, 542-1, -542):\n",
+    "    fname = '/home/liuq/apt/2ndYear/sDBN/theta/5420_b1000_epoc%05d_cd.npy'%(step)\n",
+    "    a, b, w = np.load(fname)\n",
+    "    i = 3\n",
+    "    s_num = pow(10, i+1)\n",
+    "    dis[str(s_num)] = []\n",
+    "    data_g, tmp= avg_distr(a, b, w, s_num, init_v)\n",
+    "    for i in range(s_num):\n",
+    "        dis[str(s_num)].append(np.linalg.norm(data_g[i]-k_center[0]))\n",
+    "    his = np.histogram(dis[str(s_num)]) #, bins=[0, 1, 2, 3]\n",
+    "    plt.plot(his[1][0:-1], his[0])\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -156,14 +301,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/liuq/apt/2ndYear/sDBN/theta/5420_b1000_epoc00001_cd.npy\n"
+      "4\n"
      ]
     }
    ],
    "source": [
-    "i = 1\n",
-    "fname = '/home/liuq/apt/2ndYear/sDBN/theta/5420_b1000_epoc%05d_cd.npy'%(i)\n",
-    "print fname"
+    "step = 1084\n",
+    "fname = '/home/liuq/apt/2ndYear/sDBN/theta/5420_b1000_epoc%05d_cd.npy'%(step)\n",
+    "#fname = '/home/liuq/apt/2ndYear/sDBN/theta/5420_b0001_epoc00021_cd.npy' #001\n",
+    "a, b, w = np.load(fname)\n",
+    "for pow_num in range(3, 4):\n",
+    "    print pow_num\n",
+    "    dis = []\n",
+    "    s_num = 1 * pow(10, pow_num+1)\n",
+    "    data_g, tmp= avg_distr(a, b, w, s_num, init_v)\n",
+    "    for i in range(s_num):\n",
+    "        dis.append(np.linalg.norm(data_g[i]-k_center[0]))\n",
+    "    his = np.histogram(dis) #, bins=[0, 1, 2, 3]\n",
+    "    plt.plot(his[1][0:-1], his[0])\n",
+    "    plt.show()"
    ]
   },
   {
