1.update dbn learning. 2. write more. 3. make the gauss fit

--- a/code/ipython_test/dbn_training.ipynb
+++ b/code/ipython_test/dbn_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +166,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def RBM_top(dbnet, Data_v, Labels):\n",
+    "    train_num = Data_v.shape[0]\n",
+    "    w = dbnet['w_top']\n",
+    "    a = dbnet['a_top']\n",
+    "    b = dbnet['b_top']\n",
+    "    for epoc in range (dbnet['epoc']):\n",
+    "        print 'RBM training epoc:', epoc+1\n",
+    "        for k in range(0, train_num, dbnet['batch']):\n",
+    "            max_bsize = min(train_num-k, dbnet['batch'])\n",
+    "            data_v = Data_v[k:k+max_bsize]\n",
+    "            data_v = get_gendata(dbnet, dbnet['h_num']-1, data_v, 'up')\n",
+    "            label = Labels[k:k+max_bsize]\n",
+    "            d_label = np.zeros((max_bsize, 10))\n",
+    "            for i in range(max_bsize):\n",
+    "                d_label[i, int(label[i])] = 1.\n",
+    "            data_v = np.append(data_v,d_label, axis=1)\n",
+    "            a, b, w = CD1_update(data_v, a, b, w)\n",
+    "    dbnet['w_top'] = w\n",
+    "    dbnet['a_top'] = a\n",
+    "    dbnet['b_top'] = b\n",
+    "    return dbnet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +212,9 @@
     "        d_up.append(sigmoid_sampling(d_up[layer], dbnet['w_up'][layer], dbnet['b_up'][layer+1]))\n",
     "        d_down.append(predict(d_up[layer+1], dbnet['w_down'][layer], dbnet['b_down'][layer])) #probability instead of states of 0 and 1\n",
     "        delta_w = eta*matrix_times(d_up[layer+1], d_up[layer]-d_down[layer])\n",
+    "        delta_b = eta*(d_up[layer]-d_down[layer])\n",
     "        dbnet['w_down'][layer] += delta_w\n",
+    "        dbnet['b_down'][layer] += delta_b\n",
     "    output = d_up[dbnet['h_num']-1]\n",
     "    return dbnet, output\n",
     "\n",
@@ -197,7 +230,9 @@
     "        d_down[layer-1] = sigmoid_sampling(d_down[layer], dbnet['w_down'][layer-1], dbnet['b_down'][layer-1])\n",
     "        d_up[layer] = predict(d_down[layer-1], dbnet['w_up'][layer-1], dbnet['b_up'][layer]) #probability instead of states of 0 and 1\n",
     "        delta_w = eta*matrix_times(d_down[layer-1], d_down[layer]-d_up[layer])\n",
+    "        delta_b = eta*(d_down[layer]-d_up[layer])\n",
     "        dbnet['w_up'][layer-1] += delta_w\n",
+    "        dbnet['b_up'][layer] += delta_b\n",
     "    return dbnet\n",
     "\n",
     "def predict(data, weight, bias):\n",
@@ -213,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -236,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -304,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +349,7 @@
     "train_x = train_x > 50\n",
     "train_num = 1\n",
     "#digit = 5\n",
-    "#label_list = np.array(train_y).astype(int)\n",
+    "label_list = np.array(train_y).astype(int)\n",
     "index_digit = np.where(label_list<10)[0]\n",
     "if train_num <= 1 or train_num > len(index_digit):\n",
     "    train_num = len(index_digit) - 1\n",
@@ -328,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -338,8 +373,7 @@
      "output_type": "stream",
      "text": [
       "RBM training epoc: 1\n",
-      "RBM training epoc: 1\n",
-      "epoc for fine_tuning:  1\n"
+      "RBM training epoc: 1\n"
      ]
     }
    ],
@@ -349,25 +383,28 @@
     "dbnet = init_dbn(nodes, Data_v)\n",
     "# Greedy Train RBMs layer by layer\n",
     "for layer in range(dbnet['h_num']-1):\n",
-    "    dbnet = RBM_train(dbnet, layer, Data_v)\n",
+    "    dbnet = RBM_train(dbnet, layer, Data_v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dbnet = RBM_top(dbnet, Data_v, Labels)\n",
     "dbnet = fine_tuning(dbnet, Data_v, Labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "correct rate is:  0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_x, test_y = pt.get_test_data()\n",
     "test_x = test_x > 50\n",
