tests are under going

--- a/code/ipython_test/dbn_training.ipynb
+++ b/code/ipython_test/dbn_training.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -57,8 +57,8 @@
     "    dbnet['a_top'] = np.zeros(nodes[dbnet['h_num']-1] + nodes[dbnet['h_num']+1])\n",
     "    dbnet['b_top'] = np.zeros(nodes[dbnet['h_num']])\n",
     "    \n",
-    "    dbnet['epoc'] = 1\n",
-    "    dbnet['batch'] = 50\n",
+    "    dbnet['epoc'] = 40\n",
+    "    dbnet['batch'] = 500\n",
     "    \n",
     "    train_num = data_train.shape[0]\n",
     "    pixel_on = np.sum(data_train,0)\n",
@@ -155,7 +155,7 @@
     "        for k in range(0, train_num, dbnet['batch']):\n",
     "            max_bsize = min(train_num-k, dbnet['batch'])\n",
     "            data_v = Data_v[k:k+max_bsize]\n",
-    "            data_v = get_gendata(dbnet, curr_layer, data_v, 'up')\n",
+    "            data_v = (dbnet, curr_layer, data_v, 'up')\n",
     "            a, b, w = CD1_update(data_v, a, b, w)\n",
     "    dbnet['w_up'][curr_layer] = w\n",
     "    dbnet['b_down'][curr_layer] = a\n",
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -348,9 +348,11 @@
     "train_x, train_y = pt.get_train_data()\n",
     "train_x = train_x > 50\n",
     "train_num = 1\n",
-    "#digit = 5\n",
+    "\n",
     "label_list = np.array(train_y).astype(int)\n",
+    "#digit = 5\n",
     "index_digit = np.where(label_list<10)[0]\n",
+    "#index_digit = np.where(label_list==digit)[0]\n",
     "if train_num <= 1 or train_num > len(index_digit):\n",
     "    train_num = len(index_digit) - 1\n",
     "else:\n",
@@ -367,16 +369,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RBM training epoc: 1\n",
-      "RBM training epoc: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.random.seed(0)\n",
     "nodes = [784, 500, 500, 2000, 10]\n",
@@ -409,12 +402,66 @@
     "test_x, test_y = pt.get_test_data()\n",
     "test_x = test_x > 50\n",
     "result = []\n",
-    "for i in range(10):#(len(test_x)):\n",
+    "for i in range(len(test_x)):\n",
     "    result.append(testing(dbnet, test_x[i], test_y[i]))\n",
-    "correct = len(np.where(result==1))\n",
-    "false = len(np.where(result==0))\n",
-    "unclassify = len(np.where(result==-1))\n",
-    "print 'correct rate is: ', correct/len(test_x)*100."
+    "result = np.array(result)\n",
+    "correct = np.where(result==1)[0].shape[0]\n",
+    "false = np.where(result==0)[0].shape[0]\n",
+    "unclassify = np.where(result==-1)[0].shape[0]\n",
+    "print 'correct rate is: ', correct*100./len(test_x), 'fault rate is: ', false*100./len(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correct rate is:  65.6 fault rate is:  14.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 'correct rate is: ', correct*100./len(test_x), 'fault rate is: ', false*100./len(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correct rate is:  98.6547085202 fault rate is:  1.2331838565\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_x, test_y = pt.get_test_data()\n",
+    "test_x = test_x > 50\n",
+    "digit = 5\n",
+    "#index_digit = np.where(label_list<10)[0]\n",
+    "label_list = np.array(test_y).astype(int)\n",
+    "index_digit = np.where(label_list==digit)[0]\n",
+    "test_x = test_x[index_digit]\n",
+    "test_y = test_y[index_digit]\n",
+    "result = []\n",
+    "for i in range(len(test_x)):\n",
+    "    result.append(testing(dbnet, test_x[i], test_y[i]))\n",
+    "result = np.array(result)\n",
+    "correct = np.where(result==1)[0].shape[0]\n",
+    "false = np.where(result==0)[0].shape[0]\n",
+    "unclassify = np.where(result==-1)[0].shape[0]\n",
+    "print 'correct rate is: ', correct*100./len(test_x), 'fault rate is: ', false*100./len(test_x)"
    ]
   },
   {
