--- a/code/ipython_test/distribution_validate.ipynb
+++ b/code/ipython_test/distribution_validate.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -232,7 +232,7 @@
    ],
    "source": [
     "init_v = Data_v[0]\n",
-    "step = 10\n",
+    "step = 180\n",
     "fname = '/home/liuq/apt/2ndYear/sDBN/theta/5420_b1000_epoc%05d_cd.npy'%(step)\n",
     "#fname = '/home/liuq/apt/2ndYear/sDBN/theta/5420_b0001_epoc00021_cd.npy' #001\n",
     "a, b, w = np.load(fname)\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -258,10 +258,21 @@
    "source": [
     "#plt.plot(mid_bin, stat, 'b-', lw=2)\n",
     "plt.bar(his_g[1][:-1], stat_g, width=np.average(his_g[1][1:] - his_g[1][:-1]))\n",
-    "parameters, cov_matrix = curve_fit(gauss, mid_g, stat_g)\n",
-    "x_plot = np.linspace(7.5, 9.5, 1000)\n",
-    "\n",
-    "plt.plot(x_plot, gauss(x_plot, *parameters), 'r-', lw=2)\n",
+    "#parameters, cov_matrix = curve_fit(gauss, mid_g, stat_g)\n",
+    "#x_plot = np.linspace(7.5, 9.5, 1000)\n",
+    "#print parameters\n",
+    "#plt.plot(x_plot, gauss(x_plot, *parameters), 'r-', lw=2)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "plt.show()"
    ]
   },
