--- a/sdbn.tex
+++ b/sdbn.tex
@@ -496,6 +496,10 @@ The main advantages of DBN comparing to multilayer perceptron (MLP) lie on the f
 		\label{Fig:dbn}
 	\end{figure}
 	\subsection{A Probabilistic Representation}
+		Why the deeper the better.
+%		堆叠的RBM并不是一个多层RBM模型，而是a deep sigmoid belief net深度sigmoid置信网
+	 	Putting up layers of RBMs does not mean a layered RBM model, but a deep sigmoid belief net.
+	 	I need to study sigmoid belief net.
 	\subsection{Greedy Algorithm}
 		From the piratical view, the greedy algorithm allows each RBM model in the layer-wise sequence to receive a transformed representation of the data.
 		Especially when applying the greedy algorithm to layered dimension-reduced RBMs, the data is presented with lower dimension along the neural layers.
