--- a/sdbn.tex
+++ b/sdbn.tex
@@ -26,7 +26,7 @@
 
 \begin{document}
 
-	\title{Training Spiking Restricted~Boltzmann~Machine by Minimising Contrastive~Divergence}
+	\title{On-line Training of Spiking Deep Belief Network}
 	\author{
 	Qian~Liu
 	\thanks{
